--- a/module-1/sml-1-conceptual-overview.html
+++ b/module-1/sml-1-conceptual-overview.html
@@ -203,10 +203,9 @@
           overflow: hidden!important;
           display:block!important;
       }</style></aside>
-<div class="panel-tabset">
-<ul id="tabset-4" class="panel-tabset-tabby"><li><a data-tabby-default="" href="#tabset-4-1">Getting Started</a></li><li><a href="#tabset-4-2">Digging Deeper</a></li><li><a href="#tabset-4-3">Overview</a></li><li><a href="#tabset-4-4">The Five Steps</a></li><li><a href="#tabset-4-5">Let’s get a “feel” for it machine learning</a></li><li><a href="#tabset-4-6">Defining AI and ML</a></li><li><a href="#tabset-4-7">Supervised ML (or SML)</a></li><li><a href="#tabset-4-8">What kind of coded data?</a></li><li><a href="#tabset-4-9">How is this different from regression?</a></li><li><a href="#tabset-4-10">It’s the same!</a></li><li><a href="#tabset-4-11">But different!</a></li><li><a href="#tabset-4-12">A Spectrum of Interpretability</a></li><li><a href="#tabset-4-13">Okay, <em>really</em> complex</a></li><li><a href="#tabset-4-14">Choose Your Approach Wisely</a></li><li><a href="#tabset-4-15">The SML workflow</a></li><li><a href="#tabset-4-16">Unsupervised ML</a></li><li><a href="#tabset-4-17">Inferential statistics</a></li><li><a href="#tabset-4-18">Reinforcement Learning</a></li><li><a href="#tabset-4-19">Which technique should I choose?</a></li><li><a href="#tabset-4-20">Which technique should I choose?</a></li><li><a href="#tabset-4-21">Which technique should I choose?</a></li><li><a href="#tabset-4-22">In short</a></li><li><a href="#tabset-4-23">How do I select a model?</a></li><li><a href="#tabset-4-24">Discussion Questions</a></li><li><a href="#tabset-4-25">Overview</a></li><li><a href="#tabset-4-26">Other parts of this module</a></li><li><a href="#tabset-4-27">Troubleshooting</a></li><li><a href="#tabset-4-28"><em>fin</em></a></li></ul>
-<div class="tab-content">
-<div id="tabset-4-1">
+</section>
+<section id="getting-started" class="slide level2">
+<h2>Getting Started</h2>
 <ul>
 <li>Explain why are you interested in machine learning.</li>
 </ul>
@@ -223,8 +222,9 @@
           overflow: hidden!important;
           display:block!important;
       }</style></aside>
-</div>
-<div id="tabset-4-2">
+</section>
+<section id="digging-deeper" class="slide level2">
+<h2>Digging Deeper</h2>
 <ul>
 <li>Is there a specific use case of machine learning in which you are especially interested? Consider the data and purpose.</li>
 </ul>
@@ -241,15 +241,16 @@
           overflow: hidden!important;
           display:block!important;
       }</style></aside>
+</section></section>
+<section>
 <section id="key-concept-laser-frame" class="title-slide slide level1 center">
 <h1>Key Concept: LASER frame</h1>
 
 </section>
+<section id="overview" class="slide level2">
+<h2>Overview</h2>
 
-</div>
-<div id="tabset-4-3">
-<p><img data-src="https://sbkellogg.github.io/eci-589/unit-1/img/workflow.png" style="width:80.0%" alt=""></p>
-<aside class="notes">
+<img data-src="https://sbkellogg.github.io/eci-589/unit-1/img/workflow.png" style="width:80.0%" alt="" class="r-stretch"><aside class="notes">
 <p>Note that we go into more depth in the case study, but we present this here as the common framework used across all of the modules (not only SML).</p>
 <style type="text/css">
         span.MJX_Assistive_MathML {
@@ -262,8 +263,9 @@
           overflow: hidden!important;
           display:block!important;
       }</style></aside>
-</div>
-<div id="tabset-4-4">
+</section>
+<section id="the-five-steps" class="slide level2">
+<h2>The Five Steps</h2>
 <ol type="1">
 <li><p><strong>Prepare</strong>: Prior to analysis, we’ll look at the context from which our data came, formulate a basic research question, and get introduced the {tidymodels} packages for machine learning.</p></li>
 <li><p><strong>Wrangle</strong>: Wrangling data entails the work of cleaning, transforming, and merging data. In Part 2 we focus on importing CSV files and modifying some of our variables.</p></li>
@@ -271,13 +273,14 @@
 <li><p><strong>Model:</strong> We dive deeper into the five steps in our supervised machine learning process, focusing on the mechanics of <strong>making predictions</strong>.</p></li>
 <li><p><strong>Communicate:</strong> To wrap up our case study, we’ll create our first “data product” and share our analyses and findings by creating our first web page using R Markdown.</p></li>
 </ol>
+</section></section>
+<section>
 <section id="key-concept-machine-learning" class="title-slide slide level1 center">
 <h1>Key Concept: Machine Learning</h1>
 
 </section>
-
-</div>
-<div id="tabset-4-5">
+<section id="lets-get-a-feel-for-it-machine-learning" class="slide level2">
+<h2>Let’s get a “feel” for it machine learning</h2>
 <p>Google’s Teachable Machine!</p>
 <p><a href="https://teachablemachine.withgoogle.com/" class="uri">https://teachablemachine.withgoogle.com/</a></p>
 <p><em>What’s going on here?</em></p>
@@ -294,8 +297,9 @@
           overflow: hidden!important;
           display:block!important;
       }</style></aside>
-</div>
-<div id="tabset-4-6">
+</section>
+<section id="defining-ai-and-ml" class="slide level2">
+<h2>Defining AI and ML</h2>
 <ul>
 <li><em>Artificial Intelligence (AI)</em> (i.e., <a href="https://openai.com/api/">GPT-4</a>): Simulating human intelligence through the use of computers</li>
 <li><em>Machine learning (ML)</em>: A subset of AI focused on how computers acquire new information/knowledge</li>
@@ -314,8 +318,9 @@
           overflow: hidden!important;
           display:block!important;
       }</style></aside>
-</div>
-<div id="tabset-4-7">
+</section>
+<section id="supervised-ml-or-sml" class="slide level2">
+<h2>Supervised ML (or SML)</h2>
 <ul>
 <li>Requires <em>coded data</em>, or data with a known outcome</li>
 <li>Uses coded/outcome data to train an algorithm</li>
@@ -342,8 +347,9 @@
           overflow: hidden!important;
           display:block!important;
       }</style></aside>
-</div>
-<div id="tabset-4-8">
+</section>
+<section id="what-kind-of-coded-data" class="slide level2">
+<h2>What kind of coded data?</h2>
 <blockquote>
 <p>Want to detect spam? Get samples of spam messages. Want to forecast stocks? Find the price history. Want to find out user preferences? Parse their activities on Facebook (no, Mark, stop collecting it, enough!) (from <a href="https://vas3k.com/blog/machine_learning/">ML for Everyone</a>)</p>
 </blockquote>
@@ -367,8 +373,9 @@
           overflow: hidden!important;
           display:block!important;
       }</style></aside>
-</div>
-<div id="tabset-4-9">
+</section>
+<section id="how-is-this-different-from-regression" class="slide level2">
+<h2>How is this different from regression?</h2>
 <p>The <em>aim</em> is different, the algorithms and methods of estimation are not (or, are differences in degree, rather than in kind).</p>
 <p>In a linear regression, our aim is to estimate parameters, such as <span class="math inline">\(\beta_0\)</span> (intercept) and <span class="math inline">\(\beta_1\)</span> (slope), and to make inferences about them that are not biased by our particular sample.</p>
 <p>In a SML approach, we can use the same linear regression model, but with a goal other than making unbiased inferences about the <span class="math inline">\(\beta\)</span> parameters:</p>
@@ -386,9 +393,9 @@
           overflow: hidden!important;
           display:block!important;
       }</style></aside>
-<hr>
-</div>
-<div id="tabset-4-10">
+</section>
+<section id="its-the-same" class="slide level2">
+<h2>It’s the same!</h2>
 <p>We can use the same model for an inferential <strong>or</strong> an SML approach:</p>
 <p><span class="math inline">\(y\)</span> = <span class="math inline">\(b_0\)</span> + <span class="math inline">\(b_1\)</span> + … + <span class="math inline">\(e\)</span></p>
 <p>If we are interested in making inferences about a particular <span class="math inline">\(b\)</span> (e.g., <span class="math inline">\(b_1\)</span>), we can use theory and prior research to include particular predictors. This often favors <strong>transparent models</strong> where we understand <em>how</em> predictors relate to <span class="math inline">\(y\)</span>.</p>
@@ -406,9 +413,9 @@
           overflow: hidden!important;
           display:block!important;
       }</style></aside>
-<hr>
-</div>
-<div id="tabset-4-11">
+</section>
+<section id="but-different" class="slide level2">
+<h2>But different!</h2>
 <p>This <em>predictive goal of SML</em> means that we can do things differently:</p>
 <ul>
 <li>Multicollinearity is not necessarily an issue because we do not care <em>as much</em> to make inferences about individual parameters.</li>
@@ -429,9 +436,9 @@
           overflow: hidden!important;
           display:block!important;
       }</style></aside>
-<hr>
-</div>
-<div id="tabset-4-12">
+</section>
+<section id="a-spectrum-of-interpretability" class="slide level2">
+<h2>A Spectrum of Interpretability</h2>
 <p>The choice of model often involves a trade-off between predictive power and how easily we can understand its inner workings:</p>
 <ul>
 <li><strong>Transparent Box:</strong> Models where the relationship between inputs and outputs is clear.
@@ -463,9 +470,9 @@
           overflow: hidden!important;
           display:block!important;
       }</style></aside>
-<hr>
-</div>
-<div id="tabset-4-13">
+</section>
+<section id="okay-really-complex" class="slide level2">
+<h2>Okay, <em>really</em> complex</h2>
 <p>The focus on prediction opens the door to highly complex models:</p>
 <ul>
 <li><strong>Often “Black Box”:</strong>
@@ -500,9 +507,9 @@
           overflow: hidden!important;
           display:block!important;
       }</style></aside>
-<hr>
-</div>
-<div id="tabset-4-14">
+</section>
+<section id="choose-your-approach-wisely" class="slide level2">
+<h2>Choose Your Approach Wisely</h2>
 <p>There’s no single “best” way; the right tools depend on your goals:</p>
 <ul>
 <li><p><strong>What is your ultimate aim?</strong></p>
@@ -532,10 +539,11 @@
           overflow: hidden!important;
           display:block!important;
       }</style></aside>
-</div>
-<div id="tabset-4-15">
-<p><img data-src="https://sbkellogg.github.io/eci-589/unit-1/img/workflow.png" style="width:80.0%" alt=""></p>
-<aside class="notes">
+</section>
+<section id="the-sml-workflow" class="slide level2">
+<h2>The SML workflow</h2>
+
+<img data-src="https://sbkellogg.github.io/eci-589/unit-1/img/workflow.png" style="width:80.0%" alt="" class="r-stretch"><aside class="notes">
 <p>We expand on this in the case study.</p>
 <style type="text/css">
         span.MJX_Assistive_MathML {
@@ -548,8 +556,9 @@
           overflow: hidden!important;
           display:block!important;
       }</style></aside>
-</div>
-<div id="tabset-4-16">
+</section>
+<section id="unsupervised-ml" class="slide level2">
+<h2>Unsupervised ML</h2>
 <ul>
 <li>Does not require coded data; one way to think about unsupervised ML is that its purpose is to discover codes/labels</li>
 <li>Can be used in an <em>exploratory mode</em> (see <a href="https://journals.sagepub.com/doi/full/10.1177/0049124118769114?casa_token=EV5XH31qbyAAAAAA%3AFg09JQ1XHOOzlxYT2SSJ06vZv0jG-s4Qfz8oDIQwh2jrZ-jrHNr7xZYL2FwnZtZiokhPalvV1RL2Bw">Nelson, 2020</a>)</li>
@@ -573,8 +582,9 @@
           overflow: hidden!important;
           display:block!important;
       }</style></aside>
-</div>
-<div id="tabset-4-17">
+</section>
+<section id="inferential-statistics" class="slide level2">
+<h2>Inferential statistics</h2>
 <ul>
 <li>Principally concerned about making inferences about parameters (e.g., <span class="math inline">\(B\)</span> coefficients)</li>
 <li>Also involved with building a model that explains variation in the outcome</li>
@@ -598,8 +608,9 @@
           overflow: hidden!important;
           display:block!important;
       }</style></aside>
-</div>
-<div id="tabset-4-18">
+</section>
+<section id="reinforcement-learning" class="slide level2">
+<h2>Reinforcement Learning</h2>
 <ul>
 <li><p><strong>What It Is:</strong><br>
 A framework where an agent learns to make decisions by interacting with an environment.</p></li>
@@ -616,8 +627,9 @@ Learning through trial and error to maximize long-term rewards.</p></li>
 <li><p><strong>Why It Matters:</strong><br>
 Provides the basis for adaptive systems in fields like robotics, gaming, and intelligent educational technologies.</p></li>
 </ul>
-</div>
-<div id="tabset-4-19">
+</section>
+<section id="which-technique-should-i-choose" class="slide level2">
+<h2>Which technique should I choose?</h2>
 <p>Do you have coded data or data with a known outcome – let’s say about K-12 students – and, do you want to:</p>
 <ul>
 <li><em>Predict</em> how other students with similar data (but without a known outcome) perform?</li>
@@ -625,8 +637,9 @@ Provides the basis for adaptive systems in fields like robotics, gaming, and int
 <li><em>Provide timely or instantaneous feedback</em>, like in many learning analytics systems?</li>
 </ul>
 <p><strong>Supervised methods may be your best bet</strong></p>
-</div>
-<div id="tabset-4-20">
+</section>
+<section id="which-technique-should-i-choose-1" class="slide level2">
+<h2>Which technique should I choose?</h2>
 <p>Do you not yet have codes/outcomes – and do you want to?</p>
 <ul>
 <li><em>Achieve a starting point</em> for qualitative coding, perhaps in a <a href="https://journals.sagepub.com/doi/full/10.1177/0049124117729703">“computational grounded theory”</a> mode?</li>
@@ -634,16 +647,18 @@ Provides the basis for adaptive systems in fields like robotics, gaming, and int
 <li><em>Reduce the number of variables in your dataset</em> to a smaller, but perhaps nearly as explanatory/predictive - set of variables?</li>
 </ul>
 <p><strong>Unsupervised methods may be helpful</strong></p>
-</div>
-<div id="tabset-4-21">
+</section>
+<section id="which-technique-should-i-choose-2" class="slide level2">
+<h2>Which technique should I choose?</h2>
 <p>Do you want to say something about one or several variables’ relations with an outcome?</p>
 <ul>
 <li>See how one or more variables <em>relates</em> to an outcome</li>
 <li>Understand whether a key variable is <em>has a statistically significantly coefficient</em> in terms of its relation with an outcome of interest</li>
 </ul>
 <p><strong>Inferential statistics may be best</strong></p>
-</div>
-<div id="tabset-4-22">
+</section>
+<section id="in-short" class="slide level2">
+<h2>In short</h2>
 <ul>
 <li>If you’re interested in explaining relations, choose inferential statistics</li>
 <li>If you’re itnerested in making predictions, choose SML</li>
@@ -652,8 +667,9 @@ Provides the basis for adaptive systems in fields like robotics, gaming, and int
 <div class="footer">
 <p>Some models <em>blend</em> between inferential and SML – we’ll talk about these as we proceed!</p>
 </div>
-</div>
-<div id="tabset-4-23">
+</section>
+<section id="how-do-i-select-a-model" class="slide level2">
+<h2>How do I select a model?</h2>
 <p>One general principle is to <strong>start with the simplest useful model</strong> and to <em>build toward more complex models as helpful</em>.</p>
 <p>This principle applies in multiple ways:</p>
 <ul>
@@ -674,13 +690,9 @@ Provides the basis for adaptive systems in fields like robotics, gaming, and int
           overflow: hidden!important;
           display:block!important;
       }</style></aside>
+</section></section>
 <section id="discussion-2" class="title-slide slide level1 center">
 <h1>Discussion 2</h1>
-
-</section>
-
-</div>
-<div id="tabset-4-24">
 <div class="panel-tabset">
 <ul id="tabset-1" class="panel-tabset-tabby"><li><a data-tabby-default="" href="#tabset-1-1">Reflecting</a></li><li><a href="#tabset-1-2">Applying</a></li></ul>
 <div class="tab-content">
@@ -709,13 +721,15 @@ Provides the basis for adaptive systems in fields like robotics, gaming, and int
           overflow: hidden!important;
           display:block!important;
       }</style></aside>
+</section>
+
+<section>
 <section id="modules-overview" class="title-slide slide level1 center">
 <h1>Modules Overview</h1>
 
 </section>
-
-</div>
-<div id="tabset-4-25">
+<section id="overview-1" class="slide level2">
+<h2>Overview</h2>
 <div class="panel-tabset">
 <ul id="tabset-2" class="panel-tabset-tabby"><li><a data-tabby-default="" href="#tabset-2-1">Module 1</a></li><li><a href="#tabset-2-2">Module 2</a></li><li><a href="#tabset-2-3">Module 3</a></li><li><a href="#tabset-2-4">Module 4</a></li></ul>
 <div class="tab-content">
@@ -750,13 +764,14 @@ Provides the basis for adaptive systems in fields like robotics, gaming, and int
           overflow: hidden!important;
           display:block!important;
       }</style></aside>
+</section></section>
+<section>
 <section id="whats-next" class="title-slide slide level1 center">
 <h1>What’s Next</h1>
 
 </section>
-
-</div>
-<div id="tabset-4-26">
+<section id="other-parts-of-this-module" class="slide level2">
+<h2>Other parts of this module</h2>
 <div class="panel-tabset">
 <ul id="tabset-3" class="panel-tabset-tabby"><li><a data-tabby-default="" href="#tabset-3-1">Code-along</a></li><li><a href="#tabset-3-2">Readings</a></li><li><a href="#tabset-3-3">Case Study</a></li><li><a href="#tabset-3-4">Badge</a></li></ul>
 <div class="tab-content">
@@ -796,21 +811,20 @@ Provides the basis for adaptive systems in fields like robotics, gaming, and int
 </div>
 </div>
 </div>
-</div>
-<div id="tabset-4-27">
+</section>
+<section id="troubleshooting" class="slide level2">
+<h2>Troubleshooting</h2>
 <ul>
 <li>Please view <a href="https://docs.google.com/document/d/14Jc-KG3m5k1BvyKWqw7KmDD21IugU5nV5edfJkZyspY/edit">this Google doc</a></li>
 <li>Change default settings: Tools -&gt; Global Settings -&gt; Workspace -&gt; DO NOT restore workspace</li>
 <li>Change default settings: Tools -&gt; Global Settings -&gt; Workspace -&gt; Save workspace to .RData NEVER</li>
 <li>Session -&gt; Restart R and Clear Output is a good place to start</li>
 </ul>
-</div>
-<div id="tabset-4-28">
+</section>
+<section id="fin" class="slide level2">
+<h2><em>fin</em></h2>
 <p><a href="https://docs.google.com/document/d/14Jc-KG3m5k1BvyKWqw7KmDD21IugU5nV5edfJkZyspY/edit">General troubleshooting tips for R and RStudio</a></p>
 <a href="https://www.go.ncsu.edu/laser-institute">
-</a></div><a href="https://www.go.ncsu.edu/laser-institute">
-</a></div><a href="https://www.go.ncsu.edu/laser-institute">
-</a></div><a href="https://www.go.ncsu.edu/laser-institute">
 </a></section></section><a href="https://www.go.ncsu.edu/laser-institute">
     </a></div><a href="https://www.go.ncsu.edu/laser-institute">
   </a><div class="quarto-auto-generated-content" style="display: none;">
