--- a/module-1/sml-1-conceptual-overview.html
+++ b/module-1/sml-1-conceptual-overview.html
@@ -607,8 +607,6 @@ A framework where an agent learns to make decisions by interacting with an envir
 </ul></li>
 <li><p><strong>Key Idea:</strong><br>
 Learning through trial and error to maximize long-term rewards.</p></li>
-<li><p><strong>Why It Matters:</strong><br>
-Provides the basis for adaptive systems in fields like robotics, gaming, and intelligent educational technologies.</p></li>
 </ul>
 </section>
 <section id="which-technique-should-i-choose" class="slide level2">
@@ -644,7 +642,7 @@ Provides the basis for adaptive systems in fields like robotics, gaming, and int
 <h2>In short</h2>
 <ul>
 <li>If you’re interested in explaining relations, choose inferential statistics</li>
-<li>If you’re itnerested in making predictions, choose SML</li>
+<li>If you’re interested in making predictions, choose SML</li>
 <li>If you’re interested in exploring patterns in data, choose unsupervised ML</li>
 </ul>
 <div class="footer">
@@ -681,12 +679,12 @@ Provides the basis for adaptive systems in fields like robotics, gaming, and int
 <div class="tab-content">
 <div id="tabset-1-1">
 <ul>
-<li>When might you use SML, in general?</li>
+<li>Think back to the use case (outcome) you mentioned earlier. How does (or could) SML be an appropriate technique to use?</li>
 </ul>
 </div>
 <div id="tabset-1-2">
 <ul>
-<li>Think back to the use case you mentioned earlier. How does (or could) SML be an appropriate technique to use?</li>
+<li>Why is it important to <em>predict</em> the outcome?</li>
 </ul>
 </div>
 </div>
